--- a/src/styles.css
+++ b/src/styles.css
@@ -2565,6 +2565,9 @@ body {
   #page.iPhone .downArrowContainer, #page.firefoxAndroid .downArrowContainer {
     bottom: 180px;
   }
+  #page.iPhone .slides_wrapper .slides_inner .slide.slideTemplate-amenities .amenities .amenities__list > ul, #page.firefoxAndroid .slides_wrapper .slides_inner .slide.slideTemplate-amenities .amenities .amenities__list > ul {
+    padding-bottom: 140px;
+  }
   #page.iPhone .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__amenity_name_and_description_container,
 #page.iPhone .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__more_info, #page.firefoxAndroid .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__amenity_name_and_description_container,
 #page.firefoxAndroid .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__more_info {
@@ -2857,6 +2860,7 @@ body {
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-amenities .amenities .amenities__details_wrapper {
     padding-left: 0;
+    padding-bottom: 0;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-amenities .amenities .amenities__details_wrapper .amenities__details {
     height: auto;
@@ -2888,11 +2892,14 @@ body {
     line-height: 3.7037037037vw;
     padding: 5.0462962963vw 0;
   }
+  .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__amenity_name_and_description_container {
+    transform: translateY(calc(100% - 7.6851851852vw - 32px - 32px));
+  }
   .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__more_info_btn {
     display: none;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__name {
-    transform: translateY(calc(-8.2vh - 20px));
+    transform: translateY(calc(-7.6851851852vw - 20px));
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__name > h3 {
     font-size: 4.6296296296vw;
@@ -2903,14 +2910,25 @@ body {
     top: 4px;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__amenity_name_and_description_container {
-    padding: 10px 10vw calc(8.2vh + 32px);
+    padding: 10px 10vw calc(7.6851851852vw + 32px);
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__amenity_name_and_description_container .descriptionTextElement {
     font-size: 12px;
     line-height: 2.9240740741vw;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__more_info__dots {
-    bottom: 8.2vh;
+    display: flex;
+    align-items: center;
+    bottom: 7.6851851852vw;
+  }
+  .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__more_info__dots .dot {
+    height: 2.8703703704vw;
+    width: 2.8703703704vw;
+    margin: 0 2.5vw;
+  }
+  .slides_wrapper .slides_inner .slide.slideTemplate-amenitiesDetail .amenities_detail__more_info__dots .dot.active {
+    height: 4.3518518519vw;
+    width: 4.3518518519vw;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-views .views_section {
     display: block;
